# rttddft

./: README.md  pyproject.toml
examples/: 00-simple-rttddft.py  01-mmut.py
src/rttddft/: rttdbase.py
src/rttddft/lib/: __init__.py  basischanger.py  tdagw.py
src/rttddft/pbc/: rttdbase.py
src/rttddft/propagators/: magnus2.py  mmut.py  propstate.py
tests/: test_mol_tdrks.py  test_pbc_tdkrks.py
